# scnn

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  dev_requirements.txt  pyproject.toml  setup.py
docs/: activations.rst  conf.py  documentation.rst  examples.rst  index.rst  loss_functions.rst  metrics.rst  models.rst  optimize.rst  quick_start.rst  regularizers.rst  requirements.txt  solvers.rst
notebooks/: convex-vs-nonconvex.ipynb  huber_test.py  regularization-path.ipynb  solver-demo.ipynb  test.py
src/scnn/: __init__.py  activations.py  loss_functions.py  metrics.py  models.py  optimize.py  regularizers.py  solvers.py  support.py
src/scnn/private/: initializers.py  loss_functions.py  metrics.py
src/scnn/private/interface/: __init__.py  data.py  metrics.py  models.py  solvers.py  utils.py
src/scnn/private/methods/: __init__.py  callbacks.py  external_solver.py  method_utils.py  processing.py  termination_criteria.py
src/scnn/private/methods/core/: __init__.py  gradient_descent.py  (+3 more)
src/scnn/private/models/: __init__.py  model.py  one_vs_all.py
src/scnn/private/prox/: __init__.py  proximal_ops.py
src/scnn/private/utils/: __init__.py  linear_operators.py
test/: test_activations.py  test_optimize.py  test_regularizers.py  test_solvers.py
test/private/methods/core/: test_gradient_descent.py  test_proximal_gradient.py
test/private/methods/cvxpy/: test_cone_decomposition.py
test/private/methods/line_search/: test_conditions.py
test/private/models/convex/: test_convex_mlp.py  test_operators.py
test/private/models/decompositions/: test_quadratic_decomposition.py
test/private/models/linear/: test_l2_regression.py  test_logistic_regression.py
test/private/models/regularizers/: test_feature_group_l1.py  test_group_l1.py  test_l1.py  test_l2.py
test/private/models/solution_mappings/: test_mlps.py
test/private/prox/: test_proximal_ops.py
test/private/utils/linear/: test_iterative_solvers.py  test_preconditioners.py
(+70 files in other folders)
